[package]
name = "moth_core"
version = "0.2.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
lumi = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true}
tracing = { workspace = true }
rustrict.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
base64 = "0.22"
bitflags = "2.8.0"
rosu-v2.workspace = true
handlebars.workspace = true
axum = "0.8.4"
tokio-util = { version = "0.7.15", features = ["time"] }
tower-http = { version = "0.6", features = ["cors"] }
bool_to_bitflags = "0.1.3"
mini-moka = "0.10.3"
aformat = "0.1.8"
